# chronos

./: .env.example  .gitignore  README.md  build_site.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0efb07e45705_drop_events_table.py  13abb25611fb_update_user_table_to_use_full_name.py  1e3a01afc780_initial_tables.py  71095ff334d4_update_user_table_to_use_full_name.py  ec2bc18e1d64_remove_is_verified_modification.py
app/: auth.py  config.py  database.py  main.py  models.py  schema.py  user_manager.py  users.py
app/routers/: backend.py  frontend.py
app/schemas/: events.py  sessions.py  users.py
frontend/static/: styles.css
frontend/static/js/: app.js
frontend/static/js/components/: charts.js
frontend/static/js/services/: api.js
frontend/static/js/stores/: auth.store.js  timer.store.js
frontend/templates/: index.html
static/: styles.css
templates/: index.html
web/: biome.json  data.html  index.html  login.html  package-lock.json  package.json  signup.html  tsconfig.json  vite.config.ts
web/src/: app.ts  main.ts  modal.ts  styles.css  utils.ts
web/src/components/Navbar/: Navbar.html  Navbar.ts
web/src/services/: api.ts  db.ts  types.ts
web/src/utils/: template.ts
web/static/: manifest.json  styles.css  sw.js
web/static/css/: styles.css
web/static/js/: api.js  app.js  db.js  timer.js
web/templates/: auth.html  index.html  index_.html
web/templates/components/: timer.html
web/templates/pages/: index.html
web/templates/partials/: _base.html
(+37 files in other folders)
