[project]
name = "chronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv-cli>=3.4.1",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "fastapi[standard]>=0.135.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.48",
]
